--- a/Home.css
+++ b/Home.css
@@ -140,10 +140,16 @@ li {
     justify-content: center;
     box-sizing: border-box;
 }
+#greeting{
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    color: #BC0E0E;
+    font-weight: 700;
+}
 .songlist1{
     display: flex;
     align-items: flex-start;
-    gap: 10px;
+    gap: 15px;
 }
 .song-img1 {
     width: fit-content;
@@ -157,7 +163,7 @@ li {
     padding-inline: 10px;
 }
 .song-img1:hover{
-    background-color: #371414;
+    background-color: #4E3939;
 }
 .song-img1 img {
     width: fit-content;
@@ -170,7 +176,7 @@ li {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
-    font-weight: 100;
+    font-weight: 700;
     position: relative;
 }
 .song-img2 {
@@ -185,7 +191,7 @@ li {
     padding-inline: 10px;
 }
 .song-img2:hover{
-    background-color: #BC0E0E;
+    background-color: #4E3939;
 }
 .song-img2 img {
     width: fit-content;
@@ -198,7 +204,7 @@ li {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
-    font-weight: 100;
+    font-weight: 700;
     position: relative;
 }
 .song-img3 {
@@ -212,6 +218,9 @@ li {
     margin-top: 10px;
     padding-inline: 10px;
 }
+.song-img3:hover{
+    background-color: #4E3939;
+}
 .song-img3 img {
     width: fit-content;
     height: fit-content;
@@ -223,7 +232,7 @@ li {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
-    font-weight: 100;
+    font-weight: 700;
     position: relative;
 }
 .song-img4 {
@@ -237,6 +246,9 @@ li {
     margin-top: 10px;
     padding-inline: 10px;
 }
+.song-img4:hover{
+    background-color: #4E3939;
+}
 .song-img4 img {
     width: fit-content;
     height: fit-content;
@@ -248,6 +260,34 @@ li {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: #ffffff;
-    font-weight: 100;
+    font-weight: 700;
+    position: relative;
+}
+.song-img5 {
+    width: fit-content;
+    height: fit-content;
+    display: grid;
+    align-items: center;
+    background-color: #444343;
+    border-radius: 20px;
+    justify-content: center;
+    margin-top: 10px;
+    padding-inline: 10px;
+}
+.song-img5:hover{
+    background-color: #4E3939;
+}
+.song-img5 img {
+    width: fit-content;
+    height: fit-content;
+    margin-top: 10px;
+    border-radius: 20px;
+    position: relative;
+}
+.song-img5 h3{
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    color: #ffffff;
+    font-weight: 700;
     position: relative;
 }
