--- a/Home.css
+++ b/Home.css
@@ -130,15 +130,13 @@ li {
     padding: 5px;
 }
 .body{
-    background-color: #262626;
-    display: flex;
-    flex: 2.5;
+    margin-top: 0px;
+    width: 90%;
+    background-color: rgba(56, 56, 56, 0);
     padding: 10px;
-    flex-direction: column;
-    align-items: left;
+    background-color: #262626;
+    flex: 2.5;
     border-radius: 20px;
-    justify-content: center;
-    box-sizing: border-box;
 }
 #greeting{
     font-family: 'Poppins', sans-serif;
@@ -150,6 +148,10 @@ li {
     display: flex;
     align-items: flex-start;
     gap: 15px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .song-img1 {
     width: fit-content;
@@ -161,6 +163,7 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    cursor: pointer;
 }
 .song-img1:hover{
     background-color: #4E3939;
@@ -189,6 +192,7 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    cursor: pointer;
 }
 .song-img2:hover{
     background-color: #4E3939;
@@ -217,6 +221,7 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    cursor: pointer;
 }
 .song-img3:hover{
     background-color: #4E3939;
@@ -245,6 +250,7 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    cursor: pointer;
 }
 .song-img4:hover{
     background-color: #4E3939;
@@ -273,6 +279,7 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    cursor: pointer;
 }
 .song-img5:hover{
     background-color: #4E3939;
@@ -290,4 +297,172 @@ li {
     color: #ffffff;
     font-weight: 700;
     position: relative;
+}
+/* Bottom window */
+.bottom {
+    overflow: hidden;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    background-color: rgb(44, 44, 44);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.icons {
+    margin: auto;
+    margin-top: 20px;
+}
+
+.icons i {
+    cursor: pointer;
+    margin: 0 20px;
+}
+
+#masterSongCover {
+    position: fixed;
+    left: 15px;
+    bottom: 15px;
+    height: 50px;
+}
+
+#masterSongName {
+    position: fixed;
+    left: 75px;
+    bottom: 15px;
+    height: 50px;
+    max-width: 275px;
+    display: flex;
+    align-items: center;
+    white-space: pre-line;
+    line-height: 1.5;
+    font-weight: 500;
+}
+
+
+.progressBarContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+#masterSongProgressDuration {
+    padding: 0 5px;
+    margin-top: 2px;
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+
+#myProgressBar {
+    margin: auto;
+    width: 40vw;
+    height: 0.7vh;
+    cursor: pointer;
+}
+
+#masterSongDuration {
+    padding: 0 5px;
+    margin-top: 2px;
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+
+#gif {
+    position: absolute;
+    right: 60px;
+    bottom: 0px;
+    width: 250px;
+    height: 80px;
+    opacity: 0;
+    transition: opacity 0.5s ease-in;
+}
+
+/* Home Page */
+.home_body {
+    background-color: rgba(56, 56, 56, 0.76);
+    margin: auto;
+    margin-top: 20px;
+    flex: 1;
+    width: 60vw;
+    padding: 25px;
+    color: white;
+    display: flex;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+    flex-direction: column;
+}
+
+#greeting {
+    overflow: hidden;
+    position: static;
+    font-size: 35px;
+    max-width: fit-content;
+    border-right: .04em solid rgba(158, 158, 158, 0);
+    font-weight: 600;
+    white-space: nowrap;
+    margin-left: 30px;
+    animation:
+        typing 2.5s steps(40, end),
+        blink-caret .75s step-end 6;
+}
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes blink-caret {
+
+    from,
+    to {
+        border-color: transparent;
+    }
+
+    50% {
+        border-color: rgb(158, 158, 158);
+    }
+}
+
+#horizontalLine {
+    margin: 15px auto;
+    height: 1px;
+    width: 75%;
+    border-bottom: 2px solid white;
+}
+.social-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: auto;
+    margin-top: 20px;
+}
+.social-icon img{
+    border-radius: 5px;
+    width: 40px;
+    height: 40px;
+}
+.inline-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: auto;
+    margin-top: 20px;
+}
+.inline-list a{
+    color: white;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
 }
