some changes are needed

--- a/Home.css
+++ b/Home.css
@@ -45,7 +45,8 @@ img {
 li {
     list-style-type: none;
     padding: 10px;
-    font-size: 20px;   
+    font-size: 20px; 
+    font-weight: 500;    
     font-family: 'Poppins', sans-serif;
 }
 .Home li a{
@@ -270,10 +271,12 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    border: 2px solid rgba(56, 56, 56, 0.76);
+    transition: 0.2s ease-in;
     cursor: pointer;
 }
 .song-img1:hover{
-    background-color: #4E3939;
+    border-color: #ffffff;
 }
 .song-img1 img {
     width: fit-content;
@@ -299,10 +302,12 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    border: 2px solid rgba(56, 56, 56, 0.76);
+    transition: 0.2s ease-in;
     cursor: pointer;
 }
 .song-img2:hover{
-    background-color: #4E3939;
+    border-color: #ffffff;
 }
 .song-img2 img {
     width: fit-content;
@@ -328,10 +333,12 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    border: 2px solid rgba(56, 56, 56, 0.76);
+    transition: 0.2s ease-in;
     cursor: pointer;
 }
 .song-img3:hover{
-    background-color: #4E3939;
+    border-color: #ffffff;
 }
 .song-img3 img {
     width: fit-content;
@@ -357,10 +364,12 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    border: 2px solid rgba(56, 56, 56, 0.76);
+    transition: 0.2s ease-in;
     cursor: pointer;
 }
 .song-img4:hover{
-    background-color: #4E3939;
+    border-color: #ffffff;
 }
 .song-img4 img {
     width: fit-content;
@@ -376,6 +385,15 @@ li {
     font-weight: 700;
     position: relative;
 }
+.songlist2{
+    display: flex;
+    align-items: flex-start;
+    gap: 15px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .song-img5 {
     width: fit-content;
     height: fit-content;
@@ -386,10 +404,12 @@ li {
     justify-content: center;
     margin-top: 10px;
     padding-inline: 10px;
+    border: 2px solid rgba(56, 56, 56, 0.76);
+    transition: 0.2s ease-in;
     cursor: pointer;
 }
 .song-img5:hover{
-    background-color: #4E3939;
+    border-color: #ffffff;
 }
 .song-img5 img {
     width: fit-content;
@@ -405,6 +425,38 @@ li {
     font-weight: 700;
     position: relative;
 }
+.song-img6 {
+    width: fit-content;
+    height: fit-content;
+    display: grid;
+    align-items: center;
+    background-color: #444343;
+    border-radius: 20px;
+    justify-content: center;
+    margin-top: 10px;
+    padding-inline: 10px;
+    border: 2px solid rgba(56, 56, 56, 0.76);
+    transition: 0.2s ease-in;
+    cursor: pointer;
+}
+.song-img6:hover{
+    border-color: #ffffff;
+}
+.song-img6 img {
+    width: fit-content;
+    height: fit-content;
+    margin-top: 10px;
+    border-radius: 20px;
+    position: relative;
+}
+.song-img6 h3{
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    color: #ffffff;
+    font-weight: 700;
+    position: relative;
+}
+
 .bottom {
     overflow: hidden;
     position: sticky;
